#3371# Fixed overflow problem

--- a/styles/common.css
+++ b/styles/common.css
@@ -157,7 +157,6 @@ input.defaultButton {
 
 #main {
 	padding: 0.5em 0em 2em 0em;
-	overflow: auto;
 }
 
 #main h2 {
